// <auto-generated />
using System;
using CommandCenter.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace CommandCenter.Infrastructure.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    [Migration("20260521001323_InitialCreate")]
    partial class InitialCreate
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.4")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("CommandCenter.Domain.Entities.LearningSession", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("AudioStoragePath")
                        .HasMaxLength(1000)
                        .HasColumnType("character varying(1000)");

                    b.Property<string>("ContentType")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Description")
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)");

                    b.Property<TimeSpan?>("Duration")
                        .HasColumnType("interval");

                    b.Property<string>("ErrorMessage")
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)");

                    b.Property<string>("LearnerName")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.Property<string>("MediaStoragePath")
                        .HasMaxLength(1000)
                        .HasColumnType("character varying(1000)");

                    b.Property<DateTimeOffset?>("ProcessedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasMaxLength(300)
                        .HasColumnType("character varying(300)");

                    b.Property<string>("TranscriptStoragePath")
                        .HasMaxLength(1000)
                        .HasColumnType("character varying(1000)");

                    b.HasKey("Id");

                    b.HasIndex("CreatedAt");

                    b.HasIndex("Status");

                    b.ToTable("LearningSessions");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.LearningSignal", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<double>("ConfidenceScore")
                        .HasColumnType("double precision");

                    b.Property<string>("Level")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Notes")
                        .HasMaxLength(1000)
                        .HasColumnType("character varying(1000)");

                    b.Property<Guid>("SessionId")
                        .HasColumnType("uuid");

                    b.Property<string>("SignalType")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("SourceEvidence")
                        .HasMaxLength(1000)
                        .HasColumnType("character varying(1000)");

                    b.Property<TimeSpan>("Timestamp")
                        .HasColumnType("interval");

                    b.HasKey("Id");

                    b.HasIndex("SessionId");

                    b.ToTable("LearningSignals");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.Recommendation", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Body")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTimeOffset>("GeneratedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("Priority")
                        .HasColumnType("integer");

                    b.Property<Guid>("SessionId")
                        .HasColumnType("uuid");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasMaxLength(300)
                        .HasColumnType("character varying(300)");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("SessionId");

                    b.ToTable("Recommendations");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.SessionAnalysis", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTimeOffset>("AnalyzedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("AreasForImprovement")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("KeyTopics")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("LearningObjectivesInferred")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("ModelVersion")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<Guid>("SessionId")
                        .HasColumnType("uuid");

                    b.Property<string>("StrengthsObserved")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Summary")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("SessionId")
                        .IsUnique();

                    b.ToTable("SessionAnalyses");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.SessionMetrics", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTimeOffset>("ComputedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("FillerWordCount")
                        .HasColumnType("integer");

                    b.Property<double>("OverallAttentionScore")
                        .HasColumnType("double precision");

                    b.Property<double>("OverallComprehensionScore")
                        .HasColumnType("double precision");

                    b.Property<double>("OverallConfusionScore")
                        .HasColumnType("double precision");

                    b.Property<double>("OverallEngagementScore")
                        .HasColumnType("double precision");

                    b.Property<double>("OverallFrustrationScore")
                        .HasColumnType("double precision");

                    b.Property<int>("PauseCount")
                        .HasColumnType("integer");

                    b.Property<int>("QuestionCount")
                        .HasColumnType("integer");

                    b.Property<Guid>("SessionId")
                        .HasColumnType("uuid");

                    b.Property<double>("SpeakingRateWordsPerMinute")
                        .HasColumnType("double precision");

                    b.Property<TimeSpan>("TotalPauseDuration")
                        .HasColumnType("interval");

                    b.Property<int>("TotalWordsSpoken")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("SessionId")
                        .IsUnique();

                    b.ToTable("SessionMetrics");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.TranscriptSegment", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<double>("Confidence")
                        .HasColumnType("double precision");

                    b.Property<TimeSpan>("EndTime")
                        .HasColumnType("interval");

                    b.Property<int>("SequenceIndex")
                        .HasColumnType("integer");

                    b.Property<Guid>("SessionId")
                        .HasColumnType("uuid");

                    b.Property<string>("SpeakerTag")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<TimeSpan>("StartTime")
                        .HasColumnType("interval");

                    b.Property<string>("Text")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("SessionId");

                    b.ToTable("TranscriptSegments");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.VideoAnalysisResult", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTimeOffset>("AnalyzedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("SessionId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("SessionId")
                        .IsUnique();

                    b.ToTable("VideoAnalysisResults");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.VideoLabel", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<double>("Confidence")
                        .HasColumnType("double precision");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)");

                    b.Property<TimeSpan?>("EndTime")
                        .HasColumnType("interval");

                    b.Property<TimeSpan?>("StartTime")
                        .HasColumnType("interval");

                    b.Property<Guid>("VideoAnalysisResultId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("VideoAnalysisResultId");

                    b.ToTable("VideoLabels");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.VideoShot", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<TimeSpan>("EndTime")
                        .HasColumnType("interval");

                    b.Property<TimeSpan>("StartTime")
                        .HasColumnType("interval");

                    b.Property<Guid>("VideoAnalysisResultId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("VideoAnalysisResultId");

                    b.ToTable("VideoShots");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.LearningSignal", b =>
                {
                    b.HasOne("CommandCenter.Domain.Entities.LearningSession", "Session")
                        .WithMany("LearningSignals")
                        .HasForeignKey("SessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Session");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.Recommendation", b =>
                {
                    b.HasOne("CommandCenter.Domain.Entities.LearningSession", "Session")
                        .WithMany("Recommendations")
                        .HasForeignKey("SessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Session");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.SessionAnalysis", b =>
                {
                    b.HasOne("CommandCenter.Domain.Entities.LearningSession", "Session")
                        .WithOne("Analysis")
                        .HasForeignKey("CommandCenter.Domain.Entities.SessionAnalysis", "SessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Session");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.SessionMetrics", b =>
                {
                    b.HasOne("CommandCenter.Domain.Entities.LearningSession", "Session")
                        .WithOne("Metrics")
                        .HasForeignKey("CommandCenter.Domain.Entities.SessionMetrics", "SessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Session");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.TranscriptSegment", b =>
                {
                    b.HasOne("CommandCenter.Domain.Entities.LearningSession", "Session")
                        .WithMany("TranscriptSegments")
                        .HasForeignKey("SessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Session");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.VideoAnalysisResult", b =>
                {
                    b.HasOne("CommandCenter.Domain.Entities.LearningSession", "Session")
                        .WithOne("VideoAnalysis")
                        .HasForeignKey("CommandCenter.Domain.Entities.VideoAnalysisResult", "SessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Session");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.VideoLabel", b =>
                {
                    b.HasOne("CommandCenter.Domain.Entities.VideoAnalysisResult", "VideoAnalysisResult")
                        .WithMany("Labels")
                        .HasForeignKey("VideoAnalysisResultId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("VideoAnalysisResult");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.VideoShot", b =>
                {
                    b.HasOne("CommandCenter.Domain.Entities.VideoAnalysisResult", "VideoAnalysisResult")
                        .WithMany("Shots")
                        .HasForeignKey("VideoAnalysisResultId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("VideoAnalysisResult");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.LearningSession", b =>
                {
                    b.Navigation("Analysis");

                    b.Navigation("LearningSignals");

                    b.Navigation("Metrics");

                    b.Navigation("Recommendations");

                    b.Navigation("TranscriptSegments");

                    b.Navigation("VideoAnalysis");
                });

            modelBuilder.Entity("CommandCenter.Domain.Entities.VideoAnalysisResult", b =>
                {
                    b.Navigation("Labels");

                    b.Navigation("Shots");
                });
#pragma warning restore 612, 618
        }
    }
}
